--- a/djangoapp/blog/templates/blog/pages/index.html
+++ b/djangoapp/blog/templates/blog/pages/index.html
@@ -1,4 +1,5 @@
 {% extends "blog/base.html" %}
 {% block content %}
     <h1>Olá mundo</h1>
+    <h1>Opa {{ nome_qualquer }}</h1>
 {% endblock content %}
