--- a/djangoapp/blog/templates/blog/partials/_footer.html
+++ b/djangoapp/blog/templates/blog/partials/_footer.html
@@ -2,7 +2,8 @@
   <div class="section-content-wide">
     <div class="section-gap">
       <div class="center">
-        <a href="#"> © Blog do Marcelo - Todos os direitos reservados. </a>
+        <a href="#"> © {% now "Y" %} {{ site_setup.title }} - Todos os direitos reservados. </a>
+        {% now "DATE_FORMAT" %}
       </div>
     </div>
   </div>
